backend-deployment.yaml
# 3. 수정된 Backend Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      serviceAccountName: backend-sa
      containers:
        - name: backend-container
          image: "016562553479.dkr.ecr.ap-southeast-2.amazonaws.com/community-be:latest"
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000 # 백엔드 컨테이너 포트와 일치시켜야 합니다
  type: ClusterIP # 프론트엔드에서 내부 통신용으로 사용
